tests/NormalTests/paczka1/fuzzy1/16629805.err
Error in line 2: S746 A670 93,1
Error in line 1: YzAtKxUuN S746 38,4
Error in line 20: lgfAc A670 80,7
Error in line 14: qglpKK2u A670 65,6
Error in line 22: YzAtKxUuN S238 144,5
Error in line 19: ZkZxJy A670 69,2
Error in line 28: ZkZxJy S238 17,3
